// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`packageFileWorker assignDepConfigs(inputConfig, deps) handles depType config with override 1`] = `
Array [
  Object {
    "depName": "a",
    "depType": "dependencies",
    "foo": "beta",
  },
]
`;

exports[`packageFileWorker assignDepConfigs(inputConfig, deps) handles depType config without override 1`] = `
Array [
  Object {
    "alpha": "beta",
    "depName": "a",
    "depType": "dependencies",
    "foo": "bar",
  },
]
`;

exports[`packageFileWorker assignDepConfigs(inputConfig, deps) handles multiple deps 1`] = `
Array [
  Object {
    "depName": "a",
    "foo": "bar",
  },
  Object {
    "depName": "b",
    "foo": "bar",
  },
]
`;

exports[`packageFileWorker assignDepConfigs(inputConfig, deps) handles non-regex package name 1`] = `
Array [
  Object {
    "depName": "eslint",
    "foo": "bar",
    "labels": Array [
      "eslint",
    ],
  },
  Object {
    "depName": "eslint-foo",
    "foo": "bar",
  },
  Object {
    "depName": "a",
    "foo": "bar",
  },
  Object {
    "depName": "also-eslint",
    "foo": "bar",
  },
]
`;

exports[`packageFileWorker assignDepConfigs(inputConfig, deps) handles package config 1`] = `
Array [
  Object {
    "depName": "a",
    "foo": "bar",
    "labels": Array [
      "renovate",
    ],
  },
]
`;

exports[`packageFileWorker assignDepConfigs(inputConfig, deps) handles regex package pattern 1`] = `
Array [
  Object {
    "depName": "eslint",
    "foo": "bar",
    "labels": Array [
      "eslint",
    ],
  },
  Object {
    "depName": "eslint-foo",
    "foo": "bar",
    "labels": Array [
      "eslint",
    ],
  },
  Object {
    "depName": "a",
    "foo": "bar",
  },
  Object {
    "depName": "also-eslint",
    "foo": "bar",
    "labels": Array [
      "eslint",
    ],
  },
]
`;

exports[`packageFileWorker assignDepConfigs(inputConfig, deps) handles regex wildcard package pattern 1`] = `
Array [
  Object {
    "depName": "eslint",
    "foo": "bar",
    "labels": Array [
      "eslint",
    ],
  },
  Object {
    "depName": "eslint-foo",
    "foo": "bar",
    "labels": Array [
      "eslint",
    ],
  },
  Object {
    "depName": "a",
    "foo": "bar",
  },
  Object {
    "depName": "also-eslint",
    "foo": "bar",
  },
]
`;

exports[`packageFileWorker assignDepConfigs(inputConfig, deps) handles string deps 1`] = `
Array [
  Object {
    "depName": "a",
    "foo": "bar",
  },
]
`;

exports[`packageFileWorker assignDepConfigs(inputConfig, deps) nested package config overrides depType and general config 1`] = `
Array [
  Object {
    "depName": "a",
    "depType": "dependencies",
    "foo": "gamma",
  },
]
`;

exports[`packageFileWorker assignDepConfigs(inputConfig, deps) package config overrides depType and general config 1`] = `
Array [
  Object {
    "depName": "a",
    "depType": "dependencies",
    "foo": "gamma",
  },
]
`;

exports[`packageFileWorker findPackageFileUpgrades(config) extracts dependencies for each depType 1`] = `
Array [
  Array [
    Object {},
    Array [
      "dependencies",
      "devDependencies",
    ],
  ],
]
`;

exports[`packageFileWorker findPackageFileUpgrades(config) filters dependencies 1`] = `
Array [
  "a",
]
`;
